+neighborSection ie fix

--- a/markup/components/neighborSection/neighborSection.scss
+++ b/markup/components/neighborSection/neighborSection.scss
@@ -75,7 +75,7 @@
     list-style: none;
 
     @media (min-width: $grid-ls) {
-        max-height: 240px;
+        height: 240px;
 
         display: flex;
         flex-direction: column;
@@ -83,7 +83,7 @@
     }
 
     @media (min-width: $grid-lm) {
-        max-height: 170px;
+        height: 170px;
     }
 }
 
